--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,10 +33,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   AfyatekTransform:
     # Config indicated by + and applies to all files under models/example/
-    afyatek_transforms:
+    intermediate_transforms:
+      +schema: intermediate_transforms
       +materialized: materialized_view
-    afyatek_flattened_mats:
+    flat_mats:
+      +schema: flat_mats
       +materialized: materialized_view
-      +indexes:
-        - columns: ['base_entity_id']
-          type: btree
