--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,3 +39,6 @@ models:
     flat_mats:
       +schema: flat_mats
       +materialized: materialized_view
+    disf_data:
+      +schema: disf_data
+      +materialized: materialized_view
