refactor queries remove null values

--- a/models/intermediate_transforms/sources.yml
+++ b/models/intermediate_transforms/sources.yml
@@ -20,3 +20,5 @@ sources:
         description: "PNC Home Visits event data"
       - name: child_home_visit
         description: "Child Home Visits event data"
+      - name: referral_follow_up_visit
+        description: "Child Home Visits event data"
