Starting to refactor some of flatterning approach. For now everything is added in a schema visits. Nothing from the initial approach prior to this refactoring has been removed as this is still explaratory at this point.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,6 +39,9 @@ models:
     flat_mats:
       +schema: flat_mats
       +materialized: materialized_view
+    visits:
+      +schema: visits
+      +materialized: materialized_view
     disf_data:
       +schema: disf_data
       +materialized: materialized_view
