fixed some small issues

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,10 +42,18 @@ models:
       +indexes:
         - columns: ['base_entity_id','event_date','location_id','provider_id','date_created']
           type: btree
+    registrations:
+      +schema: registrations
+      +materialized: materialized_view
+      +indexes:
+        - columns: ['base_entity_id','event_date','team','child_location_id','location_id','provider_id']
+          type: btree
     visits:
       +schema: visits
       +materialized: materialized_view
-      +on_configuration_change: apply
+      +indexes:
+        - columns: ['base_entity_id','event_date','team','child_location_id','location_id','provider_id']
+          type: btree
     disf_data:
       +schema: disf_data
       +materialized: materialized_view
