--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -54,6 +54,12 @@ models:
       +indexes:
         - columns: ['base_entity_id','event_date','team','child_location_id','location_id','provider_id']
           type: btree
+    reports:
+      +schema: reports
+      +materialized: materialized_view
+      +indexes:
+        - columns: ['base_entity_id','event_date','team','child_location_id','location_id','provider_id']
+          type: btree
     disf_data:
       +schema: disf_data
       +materialized: materialized_view
